# dintero-rust-sdk

./: Cargo.toml  LICENSE  README.md  RELEASE.md  publish.sh
dintero/: Cargo.toml
dintero-accounts/: Cargo.toml
dintero-accounts/src/: client.rs  error.rs  lib.rs  types.rs
dintero-checkout/: Cargo.toml
dintero-checkout/src/: api_keys.rs  client.rs  credit_checks.rs  lib.rs  qr_codes.rs  secrets.rs
dintero-checkout/src/sessions/: mod.rs  operations.rs  profiles.rs  types.rs
dintero-insights/: Cargo.toml
dintero-insights/src/: client.rs  kpis.rs  lib.rs  report_configs.rs  reports.rs  types.rs
dintero-orders/: Cargo.toml
dintero-payments/: Cargo.toml
dintero-payments/src/: client.rs  fund_transfers.rs  lib.rs  payouts.rs  sellers.rs  settlements.rs  transactions.rs
dintero/examples/: accounts_basic.rs  accounts_comprehensive.rs  insights.rs  orders.rs  payments.rs  payments_comprehensive.rs
dintero/src/: client.rs  lib.rs
dintero/src/adapters/: accounts.rs  insights.rs  mod.rs  payments.rs
