[package]
name = "dintero-payments"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Payments API implementation for Dintero SDK"
publish = false

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
async-trait.workspace = true
uuid.workspace = true
