[package]
name = "dintero"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rust SDK for Dintero APIs"
license.workspace = true
repository = "https://github.com/budna-marketplace/dintero-rust-sdk"
documentation = "https://docs.rs/dintero"
readme = "../README.md"
keywords = ["dintero", "payments", "checkout", "api", "sdk"]
categories = ["api-bindings", "web-programming"]

[features]
default = ["checkout", "orders", "payments", "accounts", "loyalty", "insights"]
checkout = ["dep:dintero-checkout"]
orders = ["dep:dintero-orders"]
payments = ["dep:dintero-payments"]
accounts = ["dep:dintero-accounts"]
loyalty = ["dep:dintero-loyalty"]
insights = ["dep:dintero-insights"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
bytes = "1.5"

dintero-checkout = { version = "0.2.0", path = "../dintero-checkout", optional = true }
dintero-orders = { version = "0.2.0", path = "../dintero-orders", optional = true }
dintero-payments = { version = "0.2.0", path = "../dintero-payments", optional = true }
dintero-accounts = { version = "0.2.0", path = "../dintero-accounts", optional = true }
dintero-loyalty = { version = "0.2.0", path = "../dintero-loyalty", optional = true }
dintero-insights = { version = "0.2.0", path = "../dintero-insights", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
anyhow = "1.0"
